<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/operatorSavetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opSaveText" />

        <CheckBox
            android:id="@+id/checkVehid"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/checkvid" />

        <CheckBox
            android:id="@+id/checkBlock"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/checkblock" />

        <CheckBox
            android:id="@+id/checkOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkop" />

        <TextView
            android:id="@+id/loggedDataSavetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogOptions" />

        <CheckBox
            android:id="@+id/checkupdateFTPfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udFTPfile" />

        <CheckBox
            android:id="@+id/checkupdateFTPlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udFTPlog" />

        <CheckBox
            android:id="@+id/checkupdateSDfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udSDfile" />

        <CheckBox
            android:id="@+id/checkupdateSDlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udSDlog" />
    </LinearLayout>

</ScrollView>