<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/setupHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/host" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/setupUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/uname" />

        <EditText
            android:id="@+id/setupPword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Pword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/setupDirectory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/directory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/porttitle" />

                <EditText
                    android:id="@+id/setupPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/port"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textmins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logminutes" />

                <EditText
                    android:id="@+id/setupLogmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textsecs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gpssecs" />

                <EditText
                    android:id="@+id/setupGPSsec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Secs"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>